syntax = "proto3";
package world;

import "types.proto";
import "google/protobuf/empty.proto";


// The World service provides information about the world.
service World {
    // Subscribes to updates about the indexer. Like the head block number, tps, etc.
    rpc SubscribeIndexer (SubscribeIndexerRequest) returns (stream SubscribeIndexerResponse);

    // Retrieves metadata about the World including all the registered components and systems.
    rpc WorldMetadata (WorldMetadataRequest) returns (WorldMetadataResponse);
   
    // Subscribes to models updates.
    rpc SubscribeModels (SubscribeModelsRequest) returns (stream SubscribeModelsResponse);

    // Subscribe to entity updates.
    rpc SubscribeEntities (SubscribeEntitiesRequest) returns (stream SubscribeEntityResponse);

    // Update entity subscription
    rpc UpdateEntitiesSubscription (UpdateEntitiesSubscriptionRequest) returns (google.protobuf.Empty);

    // Retrieve entities
    rpc RetrieveEntities (RetrieveEntitiesRequest) returns (RetrieveEntitiesResponse);

    // Retrieve entities as a stream
    rpc RetrieveEntitiesStreaming (RetrieveEntitiesRequest) returns (stream RetrieveEntitiesStreamingResponse);

    // Subscribe to entity updates.
    rpc SubscribeEventMessages (SubscribeEventMessagesRequest) returns (stream SubscribeEntityResponse);

    // Update entity subscription
    rpc UpdateEventMessagesSubscription (UpdateEventMessagesSubscriptionRequest) returns (google.protobuf.Empty);

    // Subscribe to token balance updates.
    rpc SubscribeTokenBalances (SubscribeTokenBalancesRequest) returns (stream SubscribeTokenBalancesResponse);

    // Update token balance subscription
    rpc UpdateTokenBalancesSubscription (UpdateTokenBalancesSubscriptionRequest) returns (google.protobuf.Empty);

    // Subscribe to token updates.
    rpc SubscribeTokens (SubscribeTokensRequest) returns (stream SubscribeTokensResponse);

    // Update token subscription
    rpc UpdateTokensSubscription (UpdateTokenSubscriptionRequest) returns (google.protobuf.Empty);

    // Retrieve entities
    rpc RetrieveEventMessages (RetrieveEventMessagesRequest) returns (RetrieveEntitiesResponse);

    // Retrieve events
    rpc RetrieveEvents (RetrieveEventsRequest) returns (RetrieveEventsResponse);

    // Subscribe to events
    rpc SubscribeEvents (SubscribeEventsRequest) returns (stream SubscribeEventsResponse);

    // Retrieve tokens
    rpc RetrieveTokens (RetrieveTokensRequest) returns (RetrieveTokensResponse);

    // Retrieve token balances
    rpc RetrieveTokenBalances (RetrieveTokenBalancesRequest) returns (RetrieveTokenBalancesResponse);

    // Retrieve controllers
    rpc RetrieveControllers (RetrieveControllersRequest) returns (RetrieveControllersResponse);
}

message RetrieveControllersRequest {
    repeated bytes contract_addresses = 1;
}

message RetrieveControllersResponse {
    repeated types.Controller controllers = 1;
}

// A request to update a token balance subscription
message UpdateTokenBalancesSubscriptionRequest {
    // The subscription ID
    uint64 subscription_id = 1;
    // The list of contract addresses to subscribe to
    repeated bytes contract_addresses = 2;
    // The list of account addresses to subscribe to
    repeated bytes account_addresses = 3;
    // The list of token IDs to subscribe to
    repeated bytes token_ids = 4;
}

// A response containing token balances
message SubscribeTokenBalancesResponse {
    // The subscription ID
    uint64 subscription_id = 1;
    // The token balance
    types.TokenBalance balance = 2;
}

// A request to retrieve tokens
message RetrieveTokensRequest {
    // The list of contract addresses to retrieve tokens for
    repeated bytes contract_addresses = 1;
    // The list of token IDs to retrieve tokens for
    repeated bytes token_ids = 2;
    // The number of tokens to retrieve
    uint32 limit = 3;
    // The offset to retrieve tokens from
    uint32 offset = 4;
    // The cursor to start the query from
    string cursor = 5;
}

// A request to subscribe to token updates
message SubscribeTokensRequest {
    // The list of contract addresses to subscribe to
    repeated bytes contract_addresses = 1;
    // The list of token IDs to subscribe to
    repeated bytes token_ids = 2;
}

// A response containing tokens
message RetrieveTokensResponse {
    string next_cursor = 1;
    repeated types.Token tokens = 2;
}

// A response containing token updates
message SubscribeTokensResponse {
    // The subscription ID
    uint64 subscription_id = 1;
    // The token
    types.Token token = 2;
}

// A request to update a token subscription
message UpdateTokenSubscriptionRequest {
    // The subscription ID
    uint64 subscription_id = 1;
    // The list of contract addresses to subscribe to
    repeated bytes contract_addresses = 2;
    // The list of token IDs to subscribe to
    repeated bytes token_ids = 3;
}

// A request to retrieve token balances
message RetrieveTokenBalancesRequest {
    // The account addresses to retrieve balances for
    repeated bytes account_addresses = 1;
    // The list of token contract addresses to retrieve balances for
    repeated bytes contract_addresses = 2;
    // The list of token IDs to retrieve balances for
    repeated bytes token_ids = 3;
    // The number of token balances to retrieve
    uint32 limit = 4;
    // The offset to retrieve token balances from
    uint32 offset = 5;
    // The cursor to start the query from
    string cursor = 6;
}

// A request to subscribe to token balance updates
message SubscribeTokenBalancesRequest {
    // The account addresses to subscribe to
    repeated bytes account_addresses = 1;
    // The list of token contract addresses to subscribe to
    repeated bytes contract_addresses = 2;
    // The list of token IDs to subscribe to
    repeated bytes token_ids = 3;
}

// A response containing token balances
message RetrieveTokenBalancesResponse {
    string next_cursor = 1;
    repeated types.TokenBalance balances = 2;
}

// A request to subscribe to indexer updates.
message SubscribeIndexerRequest {
    bytes contract_address = 1;
}

// A response containing indexer updates.
message SubscribeIndexerResponse {
    int64 head = 1;
    int64 tps = 2;
    int64 last_block_timestamp = 3;
    bytes contract_address = 4;
}

// A request to retrieve metadata for a specific world ID.
message WorldMetadataRequest {

}

// The metadata response contains addresses and class hashes for the world.
message WorldMetadataResponse {
   types.WorldMetadata metadata = 1;
}

message SubscribeModelsRequest {
    // The list of model keys to subscribe to.
    repeated types.ModelKeysClause models_keys = 1;
}

message SubscribeModelsResponse {
    // List of models that have been updated.
    types.ModelUpdate model_update = 1;
}

message SubscribeEntitiesRequest {
    repeated types.EntityKeysClause clauses = 1;
}

message SubscribeEventMessagesRequest {
    repeated types.EntityKeysClause clauses = 1;
}

message UpdateEntitiesSubscriptionRequest {
    uint64 subscription_id = 1;
    repeated types.EntityKeysClause clauses = 2;
}

message UpdateEventMessagesSubscriptionRequest {
    uint64 subscription_id = 1;
    repeated types.EntityKeysClause clauses = 2;
}

message SubscribeEntityResponse {
    types.Entity entity = 1;
    uint64 subscription_id = 2;
}

message RetrieveEntitiesRequest {
    // The entities to retrieve
    types.Query query = 1;
    // Should we retrieve historical entities?
    bool historical = 2;
}

message RetrieveEventMessagesRequest {
    // The event messages to retrieve
    types.Query query = 1;
    // Should we retrieve historical event messages?
    bool historical = 2;
}

message RetrieveEntitiesResponse {
    repeated types.Entity entities = 1;
    uint32 total_count = 2;
}

message RetrieveEntitiesStreamingResponse {
    types.Entity entity = 1;
    uint32 remaining_count = 2;
}

message RetrieveEventsRequest {
    // The events to retrieve
    types.EventQuery query = 1;
}

message RetrieveEventsResponse {
    repeated types.Event events = 1;
}

message SubscribeEventsRequest {
    repeated types.EntityKeysClause keys = 1;
}

message SubscribeEventsResponse {
    types.Event event = 1;
}
